--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,6 +11,8 @@ source:
 
 build:
   skip: true  # [win]
+  entry_points:
+    - sal-on-coco-dets = xaitk_jatic.utils.bin.sal_on_coco_dets:sal_on_coco_dets
   script: {{ PYTHON }} -m pip install . -vv
   number: 0
 
@@ -22,13 +24,19 @@ requirements:
   run:
     - python
     - xaitk-saliency >=0.8.2
-    - maite <0.6.0,>=0.5.0
+    - maite >=0.6.0
     - setuptools >=65.6.3
     - scipy <1.11.1  # [py>=38 and py<39]
     - scipy >=1.10  # [py>=39]
     - numpy <1.25,>=1.22  # [py>=38 and py<39]
     - numpy <1.26,>=1.22  # [py>=39 and py<312]
     - numpy <2.0,>=1.26  # [py>=312]
+  run_constrained:
+    - kwcoco >=0.2.18
+    - matplotlib >=3.4.1
+    - transformers ~=4.42.3
+    - timm ~=1.0.7
+    - torchvision >=0.10.0
 
 test:
   imports:
