--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,14 +23,11 @@ requirements:
     - poetry-core
   run:
     - python
-    - xaitk-saliency >=0.8.2
+    - xaitk-saliency >=0.8.3
     - maite >=0.6.0
     - setuptools >=65.6.3
-    - scipy <1.11.1  # [py>=38 and py<39]
-    - scipy >=1.10  # [py>=39]
-    - numpy <1.25,>=1.22  # [py>=38 and py<39]
-    - numpy <1.26,>=1.22  # [py>=39 and py<312]
-    - numpy <2.0,>=1.26  # [py>=312]
+    - scipy >=1.10
+    - numpy >=1.22,<2.0
   run_constrained:
     - kwcoco >=0.2.18
     - matplotlib >=3.4.1
