--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,7 +24,7 @@ requirements:
   run:
     - python
     - xaitk-saliency >=0.9.2
-    - maite >=0.6.0
+    - maite ~=0.7.1
     - setuptools >=65.6.3
     - scipy >=1.10
     - numpy >=1.22,<2.0
