--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,16 +24,17 @@ requirements:
   run:
     - python
     - xaitk-saliency >=0.9.2
-    - maite ~=0.7.1
-    - setuptools >=65.6.3
+    - maite ~=0.8.1
+    - setuptools >=78.1.1
     - scipy >=1.10
     - numpy >=1.22,<2.0
   run_constrained:
     - kwcoco >=0.2.18
     - matplotlib >=3.4.1
-    - transformers ~=4.50.0
+    - transformers >=4.52.1
     - timm ~=1.0.7
-    - torchvision >=0.10.0
+    - pytorch >=2.2.0
+    - torchvision >=0.21.0
 
 test:
   imports:
