--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,6 @@ source:
   sha256: efaae29fd0e4a5e626d0bdc6590da1e05de5a77e557699a1fcae1577841ed521
 
 build:
-  skip: true  # [win]
   entry_points:
     - sal-on-coco-dets = xaitk_jatic.utils.bin.sal_on_coco_dets:sal_on_coco_dets
   script: {{ PYTHON }} -m pip install . -vv
@@ -23,11 +22,12 @@ requirements:
     - poetry-core
   run:
     - python
-    - xaitk-saliency >=0.9.2
-    - maite ~=0.8.1
+    - xaitk-saliency >=0.14.1
+    - maite ~=0.8.2
     - setuptools >=78.1.1
     - scipy >=1.10
-    - numpy >=1.22,<2.0
+    - numpy ~=1.25  # [py<312]
+    - numpy >=2.1  # [py>312]
   run_constrained:
     - kwcoco >=0.2.18
     - matplotlib >=3.4.1
